Readme.md aangemaakt
met deze commit heb ik een Readme.md aangemaakt

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col text-center">
-                <p class="fs-1">Jyotish Baidjnath</p>
+            <div class="col-md-4 text-center">
+                <p class="fs-1">Jyotish Baidjnath <sup>g3niie</sup></p>
             </div>
         </div>
     </div>
