--- a/index.html
+++ b/index.html
@@ -11,14 +11,30 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
+  <link rel="stylesheet" href="/CSS/style.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div class="container">
-        <div class="row">
-            <div class="col-md-4 text-center">
-                <p class="fs-1">Jyotish Baidjnath <sup>g3niie</sup></p>
+        <div class="row mt-3">
+            <div class="col text-center">
+               <h1>Portfolio Jyotish Baidjnath</h1>
             </div>
+        </div>
+        <div class="row mt-3">
+          <div class="col button-container text-center">
+            <button class="change-buttons button1">Change Background-color Here!</button>
+            <button class="change-buttons button2">Change Background-color Here!</button>
+            <button class="change-buttons button3">Change Background-color Here!</button>
+          </div>
         </div>
     </div>
   <!-- Bootstrap JavaScript Libraries -->
@@ -29,6 +45,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
   </script>
+  <script src="/JS/main.js"></script>
 </body>
 
 </html>
