Hele index.html afgemaakt
met deze commit en push heb ik het hele index.html bestand afgemaakt.

--- a/index.html
+++ b/index.html
@@ -23,28 +23,52 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="row mt-3">
-            <div class="col text-center">
-               <h1>Portfolio Jyotish Baidjnath</h1>
-            </div>
-        </div>
-        <div class="row mt-3">
-          <div class="col button-container text-center">
-            <button class="change-buttons button1">Change Background-color Here!</button>
-            <button class="change-buttons button2">Change Background-color Here!</button>
-            <button class="change-buttons button3">Change Background-color Here!</button>
-          </div>
-        </div>
+  <div class="container">
+    <div class="row mt-3">
+      <div class="col text-center">
+        <h1>Portfolio Jyotish Baidjnath</h1>
+      </div>
     </div>
+    <div class="row mt-3">
+      <div class="col button-container text-center">
+        <button class="change-buttons button1">Change Background-color Here!</button>
+        <button class="change-buttons button2">Change Background-color Here!</button>
+        <button class="change-buttons button3">Change Background-color Here!</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row mt-5">
+      <div class="col-md-4 img-col text-center">
+        <div class="wrapper">
+          <img src="/IMG/me personally.jpg" class="img">
+        </div>
+      </div>
+      <div class="col-md-3 writing-col ">
+        <p>Hi! My name is Jyotish Baidjnath and this is my portfolio! In this portfolio I am going to be talking about
+          every project I have done for either school or on my own and you will knowning more about who I am as a person
+          and allot more! If you have anything you want to tell me, make sure you let me know. Enjoy your stay!
+        </p>
+      </div>
+      <div class="col-md-1"></div>
+      <div class="col-md-4 links">
+        <p>Click any of these links below to go to my other pages!</p>
+        <br>
+        <a href="index.html">About me</a> <br>
+        <a href="index.html">Projects</a> <br>
+        <a href="index.html">Contact me</a> <br>
+      </div>
+    </div>
+  </div>
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
-  </script>
+    </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
-  </script>
+    </script>
   <script src="/JS/main.js"></script>
 </body>
 
