aboutme.html bestand gemaakt
met deze commit heb ik het about me bestand gemaakt

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="col-md-4 links">
         <p>Click any of these links below to go to my other pages!</p>
         <br>
-        <a href="index.html">About me</a> <br>
+        <a href="aboutme.html">About me</a> <br>
         <a href="index.html">Projects</a> <br>
         <a href="index.html">Contact me</a> <br>
       </div>
