Hele about me page afgemaakt
met deze about me page, heb ik het hele about me page afgemaakt.

--- a/aboutme.html
+++ b/aboutme.html
@@ -2,49 +2,117 @@
 <html lang="en">
 
 <head>
-  <title>About me</title>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>About me</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Bootstrap CSS v5.2.1 -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <!-- Bootstrap CSS v5.2.1 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
     <link rel="stylesheet" href="/CSS/aboutme.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div class="container mt-5">
-         <div class="wrapper">
-            <div class="light-switch"></div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="wrapper">
+                    <div class="light-switch"></div>
+                </div>
+            </div>
+            <div class="col-md-6 text-end">
+                <button class="homepage">Back To Homepage</button>
+            </div>
         </div>
+        
     </div>
+
     <div class="container main-container">
         <div class="row">
-            <div class="col">
+            <div class="col text-center">
                 <h1>About Me</h1>
             </div>
         </div>
     </div>
-   
-  <!-- Bootstrap JavaScript Libraries -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
-  </script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
-    integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
-  </script>
-  <script src="/JS/aboutme.js"></script>
+    <div class="container main-container">
+        <div class="row">
+            <div class="col">
+                <p>
+                    Welcome to the about me part of my website! Here you can learn allot more about
+                    who I am and where I am from.
+                </p>
+                <p>
+                    So a quick little introduction on who I am. My name is Jyotish Baidjnath and I am from the
+                    Carribeans and have lived there
+                    for over 16 years. I am 18 years old I go to the school ROC Mondriaan in the Subject Software
+                    Developing.
+                </p>
+                <p>
+                    As I said in the little introduction, I have lived 16 years of my life in the Caribbeans and never
+                    moved from there to live somewhere else.
+                    I have mostly lived allot of my years, the only real friends I have are either online friends or my
+                    two best friends I have know for over 8 years.
+                    I have always been a really laid back person and I love to play games and read books in my free
+                    time. My all time Favorite hobby’s are listening to
+                    Music and swimming. I Have not failed any of classes before going into HAVO 4. I have done my full 4
+                    years of VMBO In two different
+                    schools. Before I got to the Netherlands I did HAVO 3 and then did a year of HAVO 4 before having
+                    the decision to not do HAVO anymore.
+                    The main reason why moving to the Netherlands was a must for me and my family was because I lived in
+                    a really corrupted place, so my
+                    family were close to not earning enough money. So my mom and dad decided to move from the Caribbeans
+                    to the Netherlands and I am very
+                    glad that they made that decision. At first I was hesitant towards the idea of moving here but
+                    overtime I got used to it.
+                </p>
+            </div>
+        </div>
+
+        <div class="container switch-container ">
+            <div class="row">
+                <div class="col-md-5 switch-case-1">
+                    <p>
+                        In this part of my about me page, I am going to be talking about the reason I chose Software
+                        Developing. Before I
+                        did MBO I was studying in the HAVO school Edith Stein College. But overtime I started to realize
+                        that this is not what I wanted
+                        to do so I decided to talk to my dad about it before the schoolyear ended.
+                    </p>
+                    <button class="switch-case-button1 hidden">Next page</button>
+                </div>
+                <div class="col-md-2"></div>
+                <div class="col-md-5 switch-case-2 hidden">
+                    <p>
+                        We talked about how HAVO is not for me and how it is for tbe bettr that I go to MBO now before
+                        its to late.
+                        And after we talked about it for about two days we came to the final decicion that I will be
+                        doing MBO. From then I decided to
+                        work on myself and my MBO diploma.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Bootstrap JavaScript Libraries -->
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
+            </script>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+            integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
+            </script>
+        <script src="/JS/aboutme.js"></script>
 </body>
 
 </html>
