project bijna klaar
met deze commit en push heb ik het hele project bijna af

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <p>Click any of these links below to go to my other pages!</p>
         <br>
         <a href="aboutme.html">About me</a> <br>
-        <a href="index.html">Projects</a> <br>
-        <a href="index.html">Contact me</a> <br>
+        <a href="project.html">Projects</a> <br>
+        <a href="project.html">Contact me</a> <br>
       </div>
     </div>
   </div>
