project helemaal af
Met deze commit heb ik het hele project helemaal af

--- a/project.html
+++ b/project.html
@@ -10,7 +10,7 @@
   <!-- Bootstrap CSS v5.2.1 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-  
+
   <link rel="stylesheet" href="/CSS/project.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,7 +30,8 @@
       </div>
     </div>
     <div class="row">
-      <p>Welcome to the Project part of my portfolio! Here you can see all the projects I have worked on and see the detail behind how the making was 
+      <p>Welcome to the Project part of my portfolio! Here you can see all the projects I have worked on and see the
+        detail behind how the making was
         and how I felt making the project. Click one of the buttons to see the project. Have fun!
       </p>
     </div>
@@ -41,58 +42,89 @@
         <button class="button-selector-3 me-5">Project 3</button>
         <button class="button-selector-4 me-5">Project 4</button>
         <button class="button-selector-5 me-5">Project 5</button>
-        <button class="button-selector-6">Project 6</button>
+        <button class="button-selector-6">Project 6</button> <br>
+        <a href="/index.html">Click here to go back to homepage!</a>
       </span>
     </div>
   </div>
   <div class="container mt-5">
     <div class="row">
+
       <div class="col text-center higher-lower hidden">
         <h1>Higher Lower</h1>
         <img src="/IMG/higher-lower.png" alt="">
         <p>
-          Welcome to my higherlower Project! This was our first ever school project that we had to make. For this project I got a 5,8. Which obviously, I'm not mad about
-          And this is also my first ever project that I had to make with the basic experience of HTML/CSS and JS. Overal this was a fun project to work and would definitely want to make it again and better!
+          Welcome to my higherlower Project! This was our first ever school project that we had to make. For this
+          project I got a 5,8. Which obviously, I'm not mad about
+          And this is also my first ever project that I had to make with the basic experience of HTML/CSS and JS. Overal
+          this was a fun project to work and would definitely want to make it again and better!
         </p>
-        <a href="index.html">Click here to go to the Project!</a>
+        <a href="/HL/HL/code/index.html">Click here to go to the Project!</a>
       </div>
+
       <div class="col text-center tic-tac-toe hidden">
         <h1>Tic Tac Toe</h1>
         <img src="/IMG/TicTacToe.png" class="tictactoe">
         <p>
-          In the photo above is my project called "TicTacToe", or like my class says. "BOETRO CHEEKS SEGGSS". For this project I got a 6.2, which in my opinion is fair enough for me.
-          Since I made the entire game in 2 weeks and actually had it completed. But for the rest, this was a very big trail and error experience that I genuinely enjoyed working on and always had fun testing.
+          In the photo above is my project called "TicTacToe", or like my class says. "BOETRO CHEEKS SEGGSS". For this
+          project I got a 6.2, which in my opinion is fair enough for me.
+          Since I made the entire game in 2 weeks and actually had it completed. But for the rest, this was a very big
+          trail and error experience that I genuinely enjoyed working on and always had fun testing.
         </p>
-        <a href="index.html">Click here to go to the Project!</a>
+        <a href="sd22-project-p02-boter-kaas-en-eieren-g3niie-main/sd22-project-p02-boter-kaas-en-eieren-g3niie-main/HTML/index.html">Click here to go to the Project!</a>
       </div>
+
       <div class="col text-center webcatalogus hidden">
-        <h1>Higher Lower</h1>
+        <h1>Webcatalogus</h1>
+        <img src="/IMG/Webcatalogus.jpg" class="webcatalogus-img">
+        <p>
+          This is the Webcatalogus project. This was a group project that me and my two others made. For this project we
+          all got a 6. This project was not that hard in my own opinion, it was more tedious to learn how to use fetch
+          for the project.
+          For the rest I am pretty happy with the grade for this project and how the teamwork went between us.
+        </p>
+        <a href="/sd22-p03-project-webcatalogus-t1n-sjd/index.html">Click here to go to the Project!</a>
+      </div>
+
+      <div class="col text-center dashboard hidden">
+        <h1>Dashboard</h1>
         <img src="/IMG/Dashboard.jpg" class="dashboard-img">
         <p>
-          This is the dashboard project. This was a group project that me and my two others made. For this project we all got a 6. This project was not that hard in my own opinion, it was more tedious to learn how to use fetch for the project.
-          For the rest I am pretty happy with the grade for this project and how the teamwork went between us. 
+          WORK IN PROGRESS! SORRY!
         </p>
         <a href="index.html">Click here to go to the Project!</a>
       </div>
-      <div class="col text-center dashboard hidden">
-        <h1>Higher Lower</h1>
-        <img src="/IMG/Dashboard.jpg" class="dashboard-img">
+
+      <div class="col text-center themaweek-1 hidden">
+        <h1>Themaweek 1</h1>
+        <img src="/IMG/Themaweek 1 img.png" class="themaweek-1-img">
         <p>
-          This is the dashboard project. This was a group project that me and my two others made. For this project we all got a 6. This project was not that hard in my own opinion, it was more tedious to learn how to use fetch for the project.
-          For the rest I am pretty happy with the grade for this project and how the teamwork went between us. 
+          This is the "Theweek 1" project. This was a group project me and my two other friends worked on. For this project we got a 7.5, and I was extremely proud of it. This project also tested my patience
+          and also made me not be lazy and make my friends in the group proud. In general this project for me was allot of fun to do and allot of brain pain which I didn't mind.
         </p>
-        <a href="index.html">Click here to go to the Project!</a>
+        <a href="/Escape-room-main/Escape-room-main/entrance.html">Click here to go to the Project!</a>
+      </div>
+
+      <div class="col text-center themaweek-2 hidden">
+        <h1>Themaweek 2</h1>
+        <img src="/IMG/Themaweek 2 img.png" class="themaweek-2-img">
+        <p>
+          This is the "Theweek 2" project. This was a solo project that I had to do on my own with the help of some of my classmates now and then when I didn't understand something
+          For this project, I got a 7.5 which I am extremely proud of, mostly because this showed how much better I have gotten with coding and shows how much I have learned from this schoolyear alone.
+          For the rest this project very fun and very stressfull to do and I am beyond proud that it turned out this good.
+        </p>
+        <a href="/sd22-themaweek-2-t1n-g3niie-main/sd22-themaweek-2-t1n-g3niie-main/HTML/index.html">Click here to go to the Project!</a>
       </div>
     </div>
   </div>
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
-  </script>
+    </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
-  </script>
+    </script>
   <script src="/JS/project.js"></script>
 </body>
 
