Contact page gemaakt
met deze commit heb ik het contact HTML bestand gemaakt

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <br>
         <a href="aboutme.html">About me</a> <br>
         <a href="project.html">Projects</a> <br>
-        <a href="project.html">Contact me</a> <br>
+        <a href="contact.html">Contact me</a> <br>
       </div>
     </div>
   </div>
