Alles helem,aal afgerond
met deze commit en push heb ik letterlijk alles gemaakt in mij design.

--- a/aboutme.html
+++ b/aboutme.html
@@ -78,7 +78,7 @@
                 </p>
             </div>
         </div>
-
+    </div>
         <div class="container switch-container ">
             <div class="row">
                 <div class="col-md-5 switch-case-1">
