--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="row mt-5">
       <div class="col-md-4 img-col text-center">
         <div class="wrapper">
-          <img src="/IMG/me personally.jpg" class="img">
+          <img src="/IMG/me-personally.jpg" class="img" alt="face-reveal">
         </div>
       </div>
       <div class="col-md-3 writing-col ">
