--- a/project.html
+++ b/project.html
@@ -52,7 +52,7 @@
 
       <div class="col text-center higher-lower hidden">
         <h1>Higher Lower</h1>
-        <img src="/IMG/higher-lower.png" alt="">
+        <img src="/IMG/higher-lower.png" alt="higher-lower">
         <p>
           Welcome to my higherlower Project! This was our first ever school project that we had to make. For this
           project I got a 5,8. Which obviously, I'm not mad about
@@ -64,7 +64,7 @@
 
       <div class="col text-center tic-tac-toe hidden">
         <h1>Tic Tac Toe</h1>
-        <img src="/IMG/TicTacToe.png" class="tictactoe">
+        <img src="/IMG/TicTacToe.png" class="tictactoe" alt="tic-tac-toe">
         <p>
           In the photo above is my project called "TicTacToe", or like my class says. "BOETRO CHEEKS SEGGSS". For this
           project I got a 6.2, which in my opinion is fair enough for me.
@@ -76,7 +76,7 @@
 
       <div class="col text-center webcatalogus hidden">
         <h1>Webcatalogus</h1>
-        <img src="/IMG/Webcatalogus.jpg" class="webcatalogus-img">
+        <img src="/IMG/Webcatalogus.jpg" class="webcatalogus-img" alt="webcatalogus">
         <p>
           This is the Webcatalogus project. This was a group project that me and my two others made. For this project we
           all got a 6. This project was not that hard in my own opinion, it was more tedious to learn how to use fetch
@@ -88,7 +88,7 @@
 
       <div class="col text-center dashboard hidden">
         <h1>Dashboard</h1>
-        <img src="/IMG/Dashboard.jpg" class="dashboard-img">
+        <img src="/IMG/Dashboard.jpg" class="dashboard-img" alt="dashboard">
         <p>
           WORK IN PROGRESS! SORRY!
         </p>
@@ -97,7 +97,7 @@
 
       <div class="col text-center themaweek-1 hidden">
         <h1>Themaweek 1</h1>
-        <img src="/IMG/Themaweek 1 img.png" class="themaweek-1-img">
+        <img src="/IMG/Themaweek-1-img.png" class="themaweek-1-img" alt="themaweek-1">
         <p>
           This is the "Theweek 1" project. This was a group project me and my two other friends worked on. For this project we got a 7.5, and I was extremely proud of it. This project also tested my patience
           and also made me not be lazy and make my friends in the group proud. In general this project for me was allot of fun to do and allot of brain pain which I didn't mind.
@@ -107,7 +107,7 @@
 
       <div class="col text-center themaweek-2 hidden">
         <h1>Themaweek 2</h1>
-        <img src="/IMG/Themaweek 2 img.png" class="themaweek-2-img">
+        <img src="/IMG/Themaweek-2-img.png" class="themaweek-2-img" alt="themaweek-2">
         <p>
           This is the "Theweek 2" project. This was a solo project that I had to do on my own with the help of some of my classmates now and then when I didn't understand something
           For this project, I got a 7.5 which I am extremely proud of, mostly because this showed how much better I have gotten with coding and shows how much I have learned from this schoolyear alone.
