Contact pagina hemaal klaar
met deze commit en push heb ik het hele contact pagina gemaakt

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Contact us</title>
+  <title>Contact me</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,19 +10,54 @@
   <!-- Bootstrap CSS v5.2.1 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    
+
+  <link rel="stylesheet" href="/CSS/contact.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <header>
-    <!-- place navbar here -->
-  </header>
-  <main>
-
-  </main>
-  <footer>
-    <!-- place footer here -->
-  </footer>
+  <div class="container">
+    <div class="row mb-5">
+      <div class="col text-center">
+        <h1>Contact me</h1>
+        <p>
+          Thank you for going through my portfolio! If you have any questions at all about my portfolio or have any complaints at all about the website, please let me know through one of these links down below
+        </p>
+        <a href="index.html">Back to homepage!</a>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row"> 
+      <div class="col-md-3 text-center discord">
+          <img src="/IMG/discord.webp" alt="">
+          <h4 class="h4-discord">Discord Contact</h4>
+      </div>
+      <div class="col-md-1"></div>
+      <div class="col-md-3 text-center github">
+        <img src="/IMG/Github-logo.png" alt="">
+        <h4 class="h4-github">Github Contact</h4>
+      </div>
+      <div class="col-md-1"></div>
+      <div class="email col-md-3 text-center">
+        <img src="/IMG/email-img.png" alt="">
+        <h4 class="h4-email">Email Contact</h4>
+      </div>
+    </div>
+    <div class="row mt-5">
+      <div class="col-md-4"></div>
+      <div class="col-md-3 linked-in text-center">
+        <img src="/IMG/Linkedin-img.png" alt="">
+        <h4 class="h4-linked-in">LinkedIn Contact</h4>
+      </div>
+    </div>
+  </div>
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
@@ -31,6 +66,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
   </script>
+
+  <script src="/JS/contact.js"></script>
 </body>
 
 </html>
