HELE WEBSITE KLAAR
met deze commit en push heb ik het hele website afgemaakt met alles ingezet

--- a/contact.html
+++ b/contact.html
@@ -27,17 +27,18 @@
       <div class="col text-center">
         <h1>Contact me</h1>
         <p>
-          Thank you for going through my portfolio! If you have any questions at all about my portfolio or have any complaints at all about the website, please let me know through one of these links down below
+          Thank you for going through my portfolio! If you have any questions at all about my portfolio or have any
+          complaints at all about the website, please let me know through one of these links down below
         </p>
         <a href="index.html">Back to homepage!</a>
       </div>
     </div>
   </div>
   <div class="container">
-    <div class="row"> 
+    <div class="row">
       <div class="col-md-3 text-center discord">
-          <img src="/IMG/discord.webp" alt="">
-          <h4 class="h4-discord">Discord Contact</h4>
+        <img src="/IMG/discord.webp" alt="">
+        <h4 class="h4-discord">Discord Contact</h4>
       </div>
       <div class="col-md-1"></div>
       <div class="col-md-3 text-center github">
@@ -61,11 +62,11 @@
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
-  </script>
+    </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
-  </script>
+    </script>
 
   <script src="/JS/contact.js"></script>
 </body>
