--- a/dota.html
+++ b/dota.html
@@ -62,6 +62,54 @@
                 </div>
             </div>
         </div>
+        <div class="container fourth-container">
+            <div class="row">
+                <div class="col">
+                    <p>4. Je moet Deze relaties met terminal doen zonder fouten <p style="color: yellow;">(Kijk Foto voor relaties)</p></p>
+                    <img src="dota/dota5.png">
+                    <p>Je moet in terminal dit typen: <span style="color: yellow;">symfony console make:entity</span></p>
+                    <p>En dan moet je entity maken met juiste relaties</p>
+                    <hr>
+                    <p class="text-danger">TYPE ENTITY'S MET HOOFDLETTER (Genre) EN PROPERPY ZONDER HOOFDLETTER (genre)</p>
+                    <p>Voorbeel van foto is:</p>
+                    <p class="text-success">Series heeft een relatie met Genre en property heet genre_id</p>
+                    <p class="text-danger">LET OP: BIJ MAKEN VAN RELATIES TYPE JE ALLEEN MAAR "genre", SYMFONY DOET WEL _ID VOOR JOU</p>
+                    <p class="text-success">Episode heeft een relatie met Serie en property heet serie_id</p>
+                    <hr>
+                    <p>5. Wanneer je klaar ben entity maken dit moet je alles migraten</p>
+                </div>
+            </div>
+        </div>
+        <div class="container fifth-container">
+            <p>6. Je moet twee controllers aanmaken voor deze toets in terminal <span style="color: yellow;">(Copy groene text in terminal)</span></p>
+            <p class="text-success">Symfony console make:controller ExampleController</p>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h4 class="text-warning">HIER BEGINT CODE</h4>
+                </div>
+            </div>
+        </div>
+        <div class="container sixth-container">
+            <p>Dit is de code die je al hebt gekregen, dus kopieer en plak deze, maar verander gewoon deze volgende namen: <br>
+                <hr>
+            <img src="dota/dota7.png" alt=""><br>
+            <p>"/genres moet je veranderen. "app_genre_show" moet je veranderen</p>
+            <hr>
+            <img src="dota/dota8.png" alt=""><br>
+            <p>"genres" moet je veranderen</p>
+            <hr>
+            <img src="dota/dota9.png" alt=""><br>
+            <p>"$genres" moet je veranderen. "Genre::class" moet je veranderen</p> 
+            <hr>
+            <img src="dota/dota10.png" alt=""><br>
+            <p>'series/show.html.twig' moet je veranderen naar jou eigen controller. <br> "genres" en "$genres" moet je veranderen</p>
+            </p>
+            <br><br>
+            <hr>
+            <img src="dota/dota6.png" alt="">
+        </div>
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
             integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
